# flowcoder

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
commands/: all-examples.json  ex0-design-doc.json  ex1-do-until-done.json  ex2-testing-loop.json  ex3-improve-project.json
scripts/: README.md  init-dag-state.py  migrate_flowcharts.py  select-next-batch.py  select-next-batch.sh  smoketest_engine.py
src/: embedding.py  main.py
src/adapters/: gui_session.py  protocol_bridge.py
src/cli/: __init__.py  agent.py  output.py
src/controllers/: __init__.py  command_controller.py  execution_controller.py  ui_controller.py
src/exceptions/: __init__.py  recursion_error.py
src/models/: __init__.py  blocks.py  command.py  command_argument.py  compat.py  connection.py  execution.py  flowchart.py  session.py  session_state.py
src/services/: __init__.py  audio_service.py  base_service.py  claude_engine_service.py  claude_service.py  codex_service.py  command_block_executor.py  config_service.py  editor_state_service.py  exceptions.py  file_system_service.py  mock_service.py  proxy_manager.py  service_factory.py  session_manager.py  storage_service.py
src/utils/: __init__.py  accessibility.py  bash_security.py  flowchart_syntax_analyzer.py  git_metadata.py  git_remote.py  git_repo.py  git_workflow.py  logging_config.py  prompt_sanitizer.py  sdk_message_parser.py  variable_substitution.py
src/validators/: __init__.py  command_validator.py
src/views/: __init__.py  agents_tab.py  block_config_panel.py  chat_panel.py  command_list_panel.py  commands_tab.py  execution_history_panel.py  files_tab.py  flowchart_canvas.py  main_window.py  validation_panel.py
src/views/widgets/: __init__.py  block_palette.py  block_widget.py  connection_widget.py  execution_flowchart_view.py  status_bar.py
src/widgets/: __init__.py  collapsible_frame.py  file_explorer_widget.py  line_numbered_text.py  new_session_dialog.py  session_tab_widget.py  sessions_list_widget.py
tests/: conftest.py  test_conditional_strings.py  test_execution_controller_engine.py  test_gui_session_adapter.py  test_model_compat.py  test_protocol_bridge.py  test_session_failed_loads.py  test_spawn_wait_exit.py  test_spawn_wait_integration.py  test_variable_substitution.py
tests/stress-flowcharts/: run_stress_tests.sh  stress-bash.json  stress-child.json  stress-command.json  stress-exit.json  stress-loop.json  stress-multi-prompt.json  stress-refresh.json  stress-spawn-wait.json  stress-variables.json
